monitoring/31-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: local-ca
spec:
  tls:
  - hosts: ["grafana.home.arpa"]
    secretName: grafana-tls
  rules:
  - host: grafana.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
