monitoring/41-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: local-ca
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prometheus.home.arpa
    secretName: prometheus-tls
  rules:
  - host: prometheus.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
